--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,7 +21,7 @@ img {
 br {
   display: block;
   content: "";
-  margin: 7px 0;
+  margin: 4px 0;
 }
 
 a {
@@ -63,26 +63,12 @@ body.down header.clonedHeader {
 }
 
 .logo-fixed {
-  color: rgb(30,30,30,0);
-}
-
-
-/*.icons-fixed {
-  background-size: 50px 50px;
-  width: 25px;
-  height: 25px;
   float: left;
-  opacity: 0.8;
-  margin: 8px 10px 0 0;
+  letter-spacing: 2px;
+  font-size: 1.3em;
+  color: #000;
+  font-weight: 900;
 }
-
-.icon-medium-fixed {
-  margin: 8px 0 0 0;
-}
-
-.icons-fixed:hover {
-  opacity: 1.0;
-}*/
 
 
 .top-fixed {
@@ -90,44 +76,6 @@ body.down header.clonedHeader {
   height: 70px;
   margin: 0 auto;
   padding: 0 1% 0;
-}
-
-.profile-fixed {
-  background-size: 74px 74px;
-  width: 37px;
-  height: 37px;
-}
-
-.profile-hidden {
-  margin: 12px auto 0;
-  text-align: center;
-  background: url('../img/profile-fixed@2x.png') no-repeat center;
-  background-size: 37px 37px;
-  width: 37px;
-  height: 37px;
-}
-
-.contact-fixed {
-  font-family: 'Open Sans', 'sans serif';
-  margin: 0 10px;
-  text-align: center;
-  padding: 0.6em 1.5em;
-  background-color: transparent;
-  text-shadow: none;
-  color: #605ca8;
-  border: 2px solid #605ca8;
-  border-radius: 4px;
-  text-decoration: none;
-  float: right;
-  line-height: 20px;
-  font-size: 0.75em;
-  letter-spacing: 1px;
-  font-weight: 600;
-  opacity: 0.85;
-}
-
-.contact-fixed:hover {
-  opacity: 1.0;
 }
 
 .contact-top {
@@ -317,7 +265,7 @@ textarea {
 
 .introduction {
   width: 100%;
-  height: 820px;
+  height: 1205px;
   background-color: #fff;
   text-align: center;
   padding: 50px 8% 0;
@@ -340,15 +288,6 @@ textarea {
   letter-spacing: 1.5px;
 }
 
-/*.note-about-me:before {
-  content: "";
-  background-image: url('../img/note@2x.png');
-  background-size: 27px 27px;
-  background-position: left center;
-  background-repeat: no-repeat;
-  padding-left: 40px;
-}*/
-
 .intro-description,
 .checkout-description,
 .partners-description {
@@ -362,7 +301,7 @@ textarea {
 }
 
 .iphone-1 {
-  max-height: 480px;
+  max-height: 800px;
 }
 
 .house-cleaning,
@@ -388,8 +327,16 @@ textarea {
 .cleaning,
 .laundry {
   color: #fff;
-  margin: 250px auto 20px;
+  margin: 25px auto 12px;
   text-align: left;
+}
+
+.cleaning-title {
+  font-size: 1em;
+  font-weight: 400;
+  color: #fff;
+  text-align: left;
+  margin-top: 225px; 
 }
 
 .cleaning-description,
@@ -403,13 +350,13 @@ textarea {
   text-align: left;
 }
 
-.cleaning:before {
+.cleaning-title:before {
   content: "";
   background-image: url('../img/cleaning-icon.png');
-  background-size: 27px 27px;
+  background-size: 18px 18px;
   background-position: left center;
   background-repeat: no-repeat;
-  padding-left: 42px;
+  padding-left: 28px;
 }
 
 .iphone-group {
@@ -439,7 +386,7 @@ textarea {
 }
 
 .groceries {
-  margin: 280px auto 20px;
+  margin: 25px auto 12px;
   text-align: left;
 }
 
@@ -460,13 +407,21 @@ textarea {
   max-width: 460px;
 }
 
-.groceries:before {
+.groceries-title:before {
   content: "";
   background-image: url('../img/groceries-icon.png');
-  background-size: 21px 28px;
+  background-size: 15px 19px;
   background-position: left center;
   background-repeat: no-repeat;
-  padding-left: 37px;
+  padding-left: 25px;
+}
+
+.groceries-title {
+  font-size: 1em;
+  font-weight: 400;
+  color: #8492a6;
+  text-align: left;
+  margin-top: 275px; 
 }
 
 .iphone-2 {
@@ -523,7 +478,14 @@ textarea {
 
 .laundry {
   color: #3c4858;
-  margin-top: 330px
+}
+
+.laundry-title {
+  font-size: 1em;
+  font-weight: 400;
+  color: #8492a6;
+  text-align: left;
+  margin-top: 310px
 }
 
 .do-laundry {
@@ -537,13 +499,13 @@ textarea {
   font-size: 1.10em;
 }
 
-.laundry:before {
+.laundry-title:before {
   content: "";
   background-image: url('../img/laundry-icon.png');
-  background-size: 24px 30px;
+  background-size: 15px 18px;
   background-position: left center;
   background-repeat: no-repeat;
-  padding-left: 42px;
+  padding-left: 27px;
 }
 
 .iphone-3 {
@@ -559,26 +521,42 @@ textarea {
 
 .main-services-wrap {
   margin-right: 50px;
+
+}
+
+.services-wrap {
+  max-width: 480px;
 }
 
 .services {
-  margin: 210px 0 20px;
-  max-width: 380px;
+  margin: 25px 0 12px;
   line-height: 1.4;
+  text-align: left;
+  max-width: 420px;
+}
+
+.services-title {
+  margin: 210px 0 20px;
+}
+
+.services-title {
+  font-size: 1em;
+  font-weight: 400;
+  color: #8492a6;
   text-align: left;
 }
 
 .services-description {
-  max-width: 420px;
+  max-width: 480px;
 }
 
-.services:before {
+.services-title:before {
   content: "";
   background-image: url('../img/services-icon.png');
-  background-size: 28px 28px;
+  background-size: 20px 20px;
   background-position: left center;
   background-repeat: no-repeat;
-  padding-left: 50px;
+  padding-left: 30px;
 }
 
 .iphone-4 {
@@ -629,7 +607,7 @@ textarea {
 .reclaim-life {
   height: 400px;
   border-top: 1px rgb(230,230,230) solid;
-    border-bottom: 1px rgb(230,230,230) solid;
+  border-bottom: 1px rgb(230,230,230) solid;
   background-color: #FBFBFA;
 }
 
@@ -642,13 +620,6 @@ textarea {
   margin: 120px auto 0;
   max-width: 400px;
   float: left;
-
-}
-
-.reclaim {
-}
-
-.reclaim-description {
 
 }
 
@@ -681,7 +652,7 @@ input[type="email-bottom"] {
 .app-partners {
   width: 100%;
   background-color: #fff;
-  height: 360px;
+  height: 420px;
 }
 
 .partners-wrap {
@@ -690,22 +661,39 @@ input[type="email-bottom"] {
 }
 
 .partners {
-  margin-top: 140px;
+  margin-top: 118px;
 }
 
 .partners-description {
-  max-width: 500px;
-  margin-bottom: 50px;
+  max-width: 600px;
+  margin-bottom: 15px;
+}
+
+.companies {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.taskrabbit, 
+.cleanly {
+  max-height: 50px;
+}
+
+.instacart,
+.handy,
+.fc,
+.taskrabbit,
+.cleanly {
+  margin-right: 50px;
+  margin-top: 30px;
 }
 
 .instacart {
   max-height: 40px;
-  margin-right: 50px;
 }
 
 .handy {
   max-height: 64px;
-  margin-right: 50px;
 }
 
 .fc {
@@ -713,19 +701,52 @@ input[type="email-bottom"] {
 }
 
 footer {
-  height: 70px;
   border-top: 1px #e6e6e6 solid;
   background-color: #fff;
   color: #a0a0a0;
-  text-align: center;
-  padding-top: 15px;
+  text-align: left;
   letter-spacing: 0.75px;
   font-weight: 500;
-  font-size: 0.8em;
+  font-size: 0.85em;
 }
 
-.foot {
-  display: inline;
+.footer-wrap {
+  display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.email-contact {
+  align-self: center;
+}
+
+.footer-right {
+  flex-grow: 1;
+  align-self: center;
+  text-align: center;
+}
+
+.mixpanel {
+   align-self: center;
+}
+.mix-wrap {
+  flex-grow: 1;
+}
+
+.contact-bottom:hover {
+  opacity: 0.85;
+}
+
+.contact-bottom:before {
+  content: "";
+  background-image: url('../img/email.png');
+  background-size: 20px 14px;
+  background-position: left center;
+  background-repeat: no-repeat;
+  padding-left: 30px;
 }
 
 .heart {
@@ -733,92 +754,7 @@ footer {
 }
 
 
-/**************************************************************** 
-*****************************************************************
-*****************************************************************
 
-IMAGE AND ICONS @2X DOWNSIZING
-
-*****************************************************************
-*****************************************************************
-****************************************************************/
-
-.logo-header {
-  background-size: 274px 274px;
-  max-height: 137px;
-}
-
-.green-line {
-  background-size: 672px 16px;
-  width: 336px;
-  height: 8px;
-}
-
-.purple-line {
-  background-size: 416px 16px;
-  width: 208px;
-  height: 8px;
-}
-
-.ccb {
-  background-size: 320px 70px;
-  width: 160px;
-  height: 35px;
-}
-
-.ccb-devices {
-  background-size: 2868px 1582px;
-  max-height: 791px; 
-  margin: 30px 0 60px;
-  padding-left: 3%;
-  padding-right: 3%;
-}
-
-.zep-logo {
-  background-size: 216px 102px;
-  width: 108px;
-  height: 51px;  
-}
-
-.zep-device {
-  background-size: 1358px 652px;
-  max-height: 326px;  
-  margin-top: 35px;
-}
-
-.flesy-logo {
-  background-size: 306px 128px;
-  max-height: 64px;   
-  margin-top: 235px; 
-}
-
-.flesy-top, .flesy-down {
-  background-size: 650px 1348px;
-  max-height: 674px;    
-}
-
-.sensorize-logo {
-  background-size: 532px 90px;
-  max-height: 50px;
-  padding-left: 6%; 
-  margin-bottom: 15px;  
-}
-
-.sensorize-device {
-  background-size: 1254px 1254px;
-  max-height: 627px;   
-}
-
-.agroeste-logo {
-  background-size: 436px 124px;
-  max-height: 62px;
-}
-
-.agroeste-device {
-  background-size: 1304px 1188px;
-  max-height: 594px;
-  padding-bottom: 30px; 
-}
 
 
 
